--- a/sample/index.html
+++ b/sample/index.html
@@ -152,12 +152,13 @@
 				licenseKey: '',
 				simpleUpload: {
 					// The URL that the images are uploaded to.
-					uploadUrl: '../uploads',
+					uploadUrl: '/imageUploads',
 
 					// Headers sent along with the XMLHttpRequest to the upload server.
 					headers: {
-						'X-CSRF-TOKEN': 'CSFR-Token',
-						Authorization: 'Bearer <JSON Web Token>'
+						body: {
+							deckId: 'deckId',
+						},
 					}
 
 				}
